# crop_file_acc_gps

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  croppa_file_acc_gps.sln  makefile
croppa_file_acc_gps/: Source.cpp  crop_file.cpp  croppa_file_acc_gps.vcxproj  croppa_file_acc_gps.vcxproj.filters
src/: crop_file.cpp
